--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,7 @@ main::after{
     align-items: center;
     gap: 1rem;
     min-height: 100vh;
-    width: 180px;
+    min-width: 320px;
 }
 
 .botoes button{
